[gd_scene load_steps=17 format=3 uid="uid://ddaw5dbrhq7vp"]

[ext_resource type="Script" uid="uid://cusygixtlcva" path="res://world.gd" id="1_fj7yv"]
[ext_resource type="Shader" uid="uid://cuvsx6qtlu61w" path="res://world.gdshader" id="2_aqk2v"]
[ext_resource type="MeshLibrary" uid="uid://bao6y4ora5ju4" path="res://assets/mesh_library.tres" id="2_tlwt5"]
[ext_resource type="Texture2D" uid="uid://dp1b0t41adk8g" path="res://assets/GUI/label_HP_bg.png" id="4_036b0"]
[ext_resource type="Texture2D" uid="uid://xxfhmxsg2qk7" path="res://assets/GUI/energy_bar_bg.png" id="4_dwbse"]
[ext_resource type="Texture2D" uid="uid://bu7c4jdsor4jc" path="res://assets/GUI/energy_bar_fill.png" id="5_pkg7o"]
[ext_resource type="FontFile" uid="uid://bj51mrem7ob0n" path="res://assets/Comic_Relief/Comfortaa-Bold.ttf" id="6_gbfbk"]
[ext_resource type="Texture2D" uid="uid://d3j2kvp0ibjlj" path="res://assets/main_menu/title.png" id="8_wse8f"]
[ext_resource type="Texture2D" uid="uid://cvy5lk81c8lc5" path="res://assets/main_menu/label_continue.png" id="9_ic0uy"]
[ext_resource type="Texture2D" uid="uid://hqd0tb6b1ccg" path="res://assets/main_menu/label_new_game.png" id="10_2o6r5"]
[ext_resource type="Texture2D" uid="uid://bpijg0ud7008k" path="res://assets/main_menu/label_options.png" id="11_70uel"]
[ext_resource type="Texture2D" uid="uid://cst5thf1d46qo" path="res://assets/main_menu/cubes.png" id="12_k3n1d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_036b0"]
shader = ExtResource("2_aqk2v")
shader_parameter/background_dark = false

[sub_resource type="Sky" id="Sky_dwbse"]
sky_material = SubResource("ShaderMaterial_036b0")

[sub_resource type="Environment" id="Environment_pkg7o"]
background_mode = 2
sky = SubResource("Sky_dwbse")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8l818"]

[node name="World" type="Node3D"]
script = ExtResource("1_fj7yv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pkg7o")

[node name="Board" type="GridMap" parent="."]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 1.27933, 0, 2.6768)
mesh_library = ExtResource("2_tlwt5")
physics_material = SubResource("PhysicsMaterial_8l818")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(1, 0, 1441795, 0, 65535, 2, 1, 65535, 1048578, 65535, 0, 1441793, 65535, 65534, 655361, 1, 65534, 1048579, 0, 65534, 1048579, 65535, 65535, 655363, 0, 0, 1441795, 2, 0, 1441795, 3, 0, 1, 3, 65534, 1048577, 2, 65535, 1048578, 3, 65535, 3, 2, 65534, 1048579)
}

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.134436, 0.990922, 0, -0.990922, 0.134436, 3.4006, 3.81046, 2.56736)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.637519, -0.165374, 0.752477, -0.770435, -0.136843, 0.622659, 8.4618e-10, -0.976691, -0.21465, 8.33664, 4.89996, 1.14784)
shadow_enabled = true

[node name="CoinGroup" type="Node3D" parent="."]

[node name="MarkersGroup" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.67569, 1, 0.792676)

[node name="Marker3D2" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.32193, 1, 0.729415)

[node name="Marker3D3" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.95742, 1, 0.775957)

[node name="Marker3D4" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.67569, 1, 1.98096)

[node name="Marker3D5" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.34515, 1, 1.96387)

[node name="Marker3D6" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.98364, 1, 1.97187)

[node name="Marker3D7" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.67569, 1, 3.07315)

[node name="Marker3D8" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.34596, 1, 3.09124)

[node name="Marker3D9" type="Marker3D" parent="MarkersGroup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.92408, 1, 3.06999)

[node name="Timer" type="Timer" parent="."]

[node name="Gui" type="MarginContainer" parent="."]
offset_left = 7.0
offset_top = 2.0
offset_right = 369.0
offset_bottom = 82.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Gui"]
layout_mode = 2

[node name="Gauge" type="TextureProgressBar" parent="Gui/HBoxContainer"]
layout_mode = 2
texture_under = ExtResource("4_dwbse")
texture_progress = ExtResource("5_pkg7o")

[node name="NinePatchRect" type="NinePatchRect" parent="Gui/HBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
texture = ExtResource("4_036b0")

[node name="Timer" type="Label" parent="Gui/HBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -14.0
offset_right = 30.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_gbfbk")
theme_override_font_sizes/font_size = 24
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Menu" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="TextureRect" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_wse8f")

[node name="MenuOptions" type="VBoxContainer" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Continue" type="TextureRect" parent="Menu/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_ic0uy")

[node name="New Game" type="TextureRect" parent="Menu/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("10_2o6r5")

[node name="Options" type="TextureRect" parent="Menu/HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("11_70uel")

[node name="TextureRect" type="TextureRect" parent="Menu/HBoxContainer"]
layout_mode = 2
texture = ExtResource("12_k3n1d")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
